--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -10,7 +10,9 @@
   <% end %>
 
   <% if !current_user %>
-  <%= link_to "注册", new_account_path %><br />
+  <%#= link_to "注册", new_account_path %>
+  <%= link_to "注册", CONFIG['eycp_register'] %>
+  <br />
   <%= link_to "登陆", new_user_session_path %><br />
   <% else %>
   <%= link_to "我的账号", account_path %><br />
