--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -2,6 +2,7 @@
 <%= form.text_field :login %><br />
 <%= form.label :email, t("email") %><br />
 <%= form.text_field :email %><br />
+<% if false %>
 <br />
 <%= form.label :password, form.object.new_record? ? t("password") : t("change_password") %><br />
 <%= form.password_field :password %><br />
@@ -9,3 +10,4 @@
 <%= form.label :password_confirmation, t("confirm_password") %><br />
 <%= form.password_field :password_confirmation %><br />
 <br />
+<% end %>
