--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!-- 公共布局 开始 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
-<html>
-  <head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title><%= CONFIG['app_name'] %></title>
       <%= stylesheet_link_tag 'blueprint/screen', 'blueprint/plugins/fancy-type/screen', 'video', :media => "screen", :cache => true %>
       <%= stylesheet_link_tag 'blueprint/print', :media => "print", :cache => true %>
