--- a/app/views/videos/new_iframe.html.erb
+++ b/app/views/videos/new_iframe.html.erb
@@ -13,8 +13,8 @@
   function  write_parent_video_info (title,desc,url){
     // parent.document.getElementById("openid_input").innerHTML = "http://openid.com";
     $('#tv_name', window.parent.document).val(title);
-    $('#t_intro', window.parent.document).val(desc);
-    $('#tv_flv_ur', window.parent.document).val(url);
+    $('#tv_intro', window.parent.document).val(desc);
+    $('#tv_flv_url', window.parent.document).val(url);
   }
   function submit_parent_video_form(){
     $('#new_tv', window.parent.document).submit();
