--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -12,6 +12,7 @@ $(document).ready(function() {
     'fileDataName'  : 'video[asset]',    
     'cancelImg'     : '/uploadify/cancel.png',
     'scriptData'    : {
+      'eycp' : '<%= u cookies['eycp'] %>',
       '<%= session_key_name %>' : '<%= u cookies[session_key_name] %>',
       'authenticity_token'      : '<%= u form_authenticity_token if protect_against_forgery? %>'
     },
