--- a/app/views/videos/new_iframe.html.erb
+++ b/app/views/videos/new_iframe.html.erb
@@ -1,5 +1,28 @@
-<script>
-  document.domain = "enjoyoung.cn";
+<!-- 嵌入新建视频表单 开始 -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <%= stylesheet_link_tag "http://#{request.host_with_port}/stylesheets/uploadify" %>
+<style>
+input[type=text], input[type=password], input.text, input.title, textarea, select {background-color:#fff;border:1px solid #bbb;}
+input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {border-color:#666;}
+input[type=text], input[type=password], input.text, input.title, textarea, select {margin:0.5em 0;}
+input.text, input.title {width:300px;padding:5px;}
+input.title {font-size:1.5em;}
+textarea {width:390px;height:250px;padding:5px;}
+input.span-10{border-left-width:1px!important;border-right-width:1px!important;padding-left:5px!important;padding-right:5px!important;}
+input.span-10, textarea.span-10 {width:378px!important;}
+</style>
+
+<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/jquery" %>
+<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/jquery.uploadify.js" %>
+<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/swfobject" %>
+
+<%- session_key_name = ActionController::Base.session_options[:session_key] -%>
+
+<script type="text/javascript">// <![CDATA[
 <% if false %>
 // 下面简单使用Jquery来操作iframe的一些记录，这个使用纯JS也可以实现。
 // 第一、在iframe中查找父页面元素的方法：
@@ -10,59 +33,17 @@
 // parent.method
 // parent.value
 <% end %>
-  function  write_parent_video_info (title,desc,url){
-    // parent.document.getElementById("openid_input").innerHTML = "http://openid.com";
-    $('#tv_name', window.parent.document).val(title);
-    $('#tv_intro', window.parent.document).val(desc);
-    $('#tv_flv_url', window.parent.document).val(url);
-  }
-  function submit_parent_video_form(){
-    $('#new_tv', window.parent.document).submit();
-  }
-</script>
-
-<!-- 新建视频 开始 -->
-<%# debugger %>
-<%= stylesheet_link_tag "http://#{request.host_with_port}/stylesheets/uploadify" %>
-<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/jquery" %>
-<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/jquery.uploadify.js" %>
-<%= javascript_include_tag "http://#{request.host_with_port}/javascripts/swfobject" %>
-
-<%- session_key_name = ActionController::Base.session_options[:session_key] -%>
-
-<script type="text/javascript">// <![CDATA[
-$(document).ready(function() {
-  $('#video_asset').uploadify({
-    'uploader'      : '/uploadify/uploadify.swf',
-    'script'        : '/videos',
-    'fileDataName'  : 'video[asset]',    
-    'cancelImg'     : '/uploadify/cancel.png',
-    'scriptData'    : {
-      '<%= session_key_name %>' : '<%= u cookies[session_key_name] %>',
-      'authenticity_token'      : '<%= u form_authenticity_token if protect_against_forgery? %>'
-    },
-    // <% if false  %>
-    // 选择文件时附加上视频信息有问题，改为点击上传按钮时附加上
-    // onSelectOnce: function(evt, queueID, fileObj, response, data) { 
-    //   $('#video_asset').uploadifySettings('scriptData', {
-    //     'video[title]' : $('#video_title').val(),
-    //     'video[description]' : $('#video_description').val()        
-    //   });
-    // },
-    // <% end %>
-    // <%# 上传成功后redirect到视频页面 %>
-    onComplete: function (evt, queueID, fileObj, response, data) {
-      var v_id = response.match(/id\=(\d+)/)[1];
-      var title = response.match(/title\=(\d+)/)[1];
-      var desc = response.match(/desc\=(\d+)/)[1];
-      // alert(v_id);
-      // url = window.location = "/videos/"+v_id;
-      var url = v_id;
-      write_parent_video_info(title,desc,url);
-      submit_parent_video_form();
-    },    
-  });
-});
+document.domain = "enjoyoung.cn";
+// <%# 将视频信息写到嵌入该表单的父页面的表单 %>  
+function  write_parent_video_info(title,desc,url){
+  $('#tv_name', window.parent.document).val(title);
+  $('#tv_intro', window.parent.document).val(desc);
+  $('#tv_flv_url', window.parent.document).val(url);
+}
+// <%# 提交用iframe嵌入该表单的父页面的表单 %>  
+function submit_parent_video_form(){
+  $('#new_tv', window.parent.document).submit();
+}
 // <%# 上传前附加上视频信息 %>
 function add_video_info(){
   $('#video_asset').uploadifySettings('scriptData', {
@@ -70,10 +51,34 @@ function add_video_info(){
     'video[description]' : $('#video_description').val()     
   }); 
 }
-// ]]></script>
-
+$(document).ready(function() {
+  $('#video_asset').uploadify({
+    'uploader'      : '/uploadify/uploadify.swf',
+    'script'        : '/videos',
+    'fileDataName'  : 'video[asset]',    
+    'cancelImg'     : '/uploadify/cancel.png',
+    'scriptData'    : {
+      'eycp' : '<%= u cookies['eycp'] %>',      
+      '<%= session_key_name %>' : '<%= u cookies[session_key_name] %>',
+      'authenticity_token'      : '<%= u form_authenticity_token if protect_against_forgery? %>'
+    },
+    // <%# 上传成功后提交父页面的表单 %>
+    onComplete: function (evt, queueID, fileObj, response, data) {
+      var v_id = response.match(/id\=(\d+)/)[1];
+      var title = response.match(/title\=(.*)\s/)[1];
+      var desc = response.match(/desc\=(.*)/)[1];
+      // url = window.location = "/videos/"+v_id;
+      var url = v_id;
+      write_parent_video_info(title,desc,url);
+      submit_parent_video_form();
+    }
+  });
+});
+// ]]>
+</script>
+</head>
+<body>
 <h2>新建视频</h2>
-<hr />
 
 <%# TODO 增加前端表单验证 %>
 <% form_for(@video, :html => { :multipart => true }) do |f| %>
@@ -85,7 +90,7 @@ function add_video_info(){
     </tr>
     <tr>
       <td><%= f.label :description,'描述' %>: </td>
-      <td><%= f.text_area :description, :class => 'span-10'%></td>
+      <td><%= f.text_area :description, :class => 'span-10', :rows => 10 %></td>
     </tr>
 <% if false %>
     <tr>
@@ -112,6 +117,7 @@ function add_video_info(){
       </td>
     </tr>
   </table>
-
 <% end %>
-<!-- 新建视频 结束 -->
+</body>
+</html>
+<!-- 嵌入新建视频表单 结束 -->
