--- a/app/views/admin/videos/edit.html.erb
+++ b/app/views/admin/videos/edit.html.erb
@@ -56,7 +56,7 @@
   <%= f.submit "重新生成缩略图" %> |
   <%= f.submit "手动编码" unless @video.state=="pending" %>
   <%= f.submit "不需编码" %>
-  <% if @video.state == 'soft_deleted' %>
+  <% if @video.soft_deleted? %>
   <%#= link_to("恢复该视频", admin_video_path(@video), :confirm => '恢复该视频?', :method => :put) %>
   <%= f.submit "恢复该视频", :confirm => '恢复该视频?' %>
   <% else %>
@@ -94,7 +94,7 @@
 </div>
 
 
-<% if @video.state == "converted" %>
+<% if @video.converted? %>
 <div class = "span-18">
   <h3 class="alt">播放编码后的视频：</h3>
   <%= "进入编码队列于：" + @video.queued_at.to_s(:db) if @video.queued_at %>
