--- a/app/views/meishi/videos/share_dv_iframe.html.erb
+++ b/app/views/meishi/videos/share_dv_iframe.html.erb
@@ -56,7 +56,7 @@ $(document).ready(function() {
       // var title = response.match(/title\=(.*)\s/)[1];
       // var desc = response.match(/desc\=(.*)/)[1];
       var url = "<%= CONFIG['meishi']['url'] %>"+"/home/share_dv?upload=success"
-      alert(url);
+      // alert(url);
       parent.window.location = url;
       // var url = v_id;
       // write_parent_video_info(title,desc,url);
