--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -13,6 +13,7 @@ $(document).ready(function() {
     'cancelImg'     : '/uploadify/cancel.png',
     'scriptData'    : {
       'eycp' : '<%= u cookies['eycp'] %>',
+      'user_credentials' : '<%= u cookies['user_credentials'] %>',
       '<%= session_key_name %>' : '<%= u cookies[session_key_name] %>',
       'authenticity_token'      : '<%= u form_authenticity_token if protect_against_forgery? %>'
     },
