--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@ end
                 video_path(video) %>
     <br />
     <b>
-    <%= link_to truncate(video.title, 28), video_path(video), :class => "video_title" %>
+    <%= link_to truncate(video.title, :length=>28), video_path(video), :class => "video_title" %>
     </b>                
   </div>
   <div class="prepend-1 alt">
