--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -8,8 +8,7 @@
 <% @videos.each do |video| %>
 <div class="prepend-1 span-5">
   <div class="video_small">  
-    <%= link_to (image_tag video.asset.url(:small), :alt => video.filename), 
-                video_path(video) %>
+    <%= link_to (image_tag video.asset.url(:small), :alt => video.filename), video_path(video) %>
     <br />
     <b>
     <%= link_to truncate(video.title, :length=>28), video_path(video), :class => "video_title" %>
