--- a/app/views/shared/_admin_video_list.html.erb
+++ b/app/views/shared/_admin_video_list.html.erb
@@ -6,7 +6,8 @@
 <div class="span-7">
   <span><%= t("title") %>:</span>
   <%= link_to truncate(video.title, :length=>26), edit_admin_video_url(video) %><br />
-  <span><%= t("uploader") %>:</span> <%= link_to video.user.login, user_path(video.user) %>
+    <span><%= t("uploader") %>:</span> <%= link_to video.user.login, user_path(video.user) %><br />
+    <span><%= t("upload_time") %>:</span> <%= video.created_at.to_s %>
 </div>
 <div class="span-3">
   <span>状态</span>:
