--- a/app/views/admin/videos/show.html.erb
+++ b/app/views/admin/videos/show.html.erb
@@ -44,13 +44,15 @@
   <br />
   <% if time = @video.encoding_time %>
   完成编码总用： 
-  <%= "#{time.hour}小时" unless time.hour == 0 %>
-  <%= "#{time.min}分" unless time.min == 0 %>
-  <%= "#{time.sec}秒" %>
+  <%#= "#{time.hour}小时" unless time.hour == 0 %>
+  <%#= "#{time.min}分" unless time.min == 0 %>
+  <%#= "#{time.sec}秒" %>
+  <%= "#{time}秒" %>
   <% end %>
   编码后视频：
   <% url = @video.asset.url(:transcoded) %>
   <%= render :partial => "shared/flowplayer", :locals => { :url => url } %>
+  <%= link_to "下载编码后视频", url %>
   原始视频：
   <% org_url = @video.asset.url %>
   <%= render :partial => "shared/flowplayer", :locals => { :url => org_url, 
