--- a/app/views/admin/videos/show.html.erb
+++ b/app/views/admin/videos/show.html.erb
@@ -52,7 +52,7 @@
   编码后视频：
   <% url = @video.asset.url(:transcoded) %>
   <%= render :partial => "shared/flowplayer", :locals => { :url => url } %>
-  <%= link_to "下载编码后视频", url %>
+  <%= link_to "下载编码后视频", url %><br />
   原始视频：
   <% org_url = @video.asset.url %>
   <%= render :partial => "shared/flowplayer", :locals => { :url => org_url, 
