--- a/app/views/admin/videos/edit.html.erb
+++ b/app/views/admin/videos/edit.html.erb
@@ -44,9 +44,16 @@
   <div class="span-12">
   <%= f.submit "提交更新" %> |
   <% if @video.state=="pending" %>
-  <%= f.submit "审核通过" %> | 
-  <% elsif @video.state=="converting" %>
-  <%= f.submit "中止编码" %> |  
+  <%= f.submit "审核通过" %> |
+   
+  <!-- 
+  <%# elsif @video.state=="converting" %>
+  <%#= f.submit "中止编码" %> |  
+  -->
+
+  <% elsif @video.converting? %>
+  <%= f.submit "疏通队列", :confirm => '确定疏通队列?' %> |  
+   
   <% elsif @video.state=="canceled" || @video.state=="error" \
           || @video.state=="soft_deleted"%>
     <%= f.submit "重置视频" %> |  
