--- a/app/views/meishi/admin/videos/iframe_form.erb
+++ b/app/views/meishi/admin/videos/iframe_form.erb
@@ -51,8 +51,15 @@
   <%= f.submit "提交更新" %> |
   <% if @video.state=="pending" %>
   <%= f.submit "审核通过" %> | 
-  <% elsif @video.state=="converting" %>
-  <%= f.submit "中止编码" %> |  
+
+  <!-- 
+  <%# elsif @video.state=="converting" %>
+  <%#= f.submit "中止编码" %> |   
+  -->
+
+  <% elsif @video.converting? %>
+  <%= f.submit "疏通队列", :confirm => '确定疏通队列?' %> |  
+
   <% elsif @video.state=="canceled" || @video.state=="error" \
           || @video.state=="soft_deleted"%>
     <%= f.submit "重置视频" %> |  
