--- a/app/views/meishi/admin/videos/iframe_form.erb
+++ b/app/views/meishi/admin/videos/iframe_form.erb
@@ -113,11 +113,11 @@
   <%= "开始编码于：" + @video.started_encoding_at.to_s(:db) if @video.started_encoding_at %>
   <%= "结束编码于：" + @video.encoded_at.to_s(:db) if @video.encoded_at %><hr class="space" />
   <% if time = @video.encoding_time %>
-  完成编码总用： 
+  完成编码总用时： 
   <%#= "#{time.hour}小时" unless time.hour == 0 %>
   <%#= "#{time.min}分" unless time.min == 0 %>
   <%#= "#{time.sec}秒" %>
-  <%= "#{time}秒" %>
+  <%= time.string_to_time %>
   <% end %>
   <% url = @video.asset.url(:transcoded) %>
   <%= render :partial => "shared/flowplayer", :locals => { :url => url, :player_id => "encoded_player" } %>
