--- a/app/views/admin/videos/edit.html.erb
+++ b/app/views/admin/videos/edit.html.erb
@@ -26,7 +26,7 @@
   <hr class="space" />  
   
   <h3 class="alt">当前状态: </h3>
-  <%= t(@video.state) %>
+  <%= t(@video.state) %> <%#= @enconding_state ? "(有视频在编码中)" : "(没有视频在编码中)" %>
   <hr class="space" />  
   
   <h3 class="alt">视频截图:</h3>
